--- a/toi/localisation/english/italy_l_english.yml
+++ b/toi/localisation/english/italy_l_english.yml
@@ -2855,7 +2855,9 @@ ITA_PIE_focus_Diplomacy_with_Prussia_desc: "Prussia may not be at the same statu
 ITA_PIE_focus_Further_Diplomacy_France: "Further Diplomacy with France"
 ITA_PIE_focus_Further_Diplomacy_France_desc: "As a great power on the continent, good relations and recognition from France will be extremely beneficial in the preservation of Italy. It may also help in the taking of the Papal States."
 ITA_PIE_focus_The_Bucharest_Revolution: "The Bucharest Revolution"
+ITA_PIE_focus_The_Bucharest_Revolution_desc: "The Romanians have taken their shot at independence from the Ottoman Empire. We will support them in their cause for freedom."
 ITA_PIE_focus_The_Brigandry_Cases: "The Brigandry Cases"
+ITA_PIE_focus_The_Brigandry_Cases_desc: "Cases of brigandry have been brought before the Italian courts. One of the most high profile is the case of the La Gala's."
 ITA_PIE_focus_Strengthen_British_Relations: "Strengthen British Relations"
 ITA_PIE_focus_Strengthen_British_Relations_desc: "While not on the continent, Britain's expansive empire and extreme influence on Europe may give reason to be on good terms with them."
 ITA_PIE_focus_Treaties_with_San_Marino: "Treaties with San Marino"
@@ -2863,6 +2865,7 @@ ITA_PIE_focus_Treaties_with_San_Marino_desc: "As we have previously guaranteed t
 ITA_PIE_focus_Diplomacy_with_Austria: "Diplomacy with Austria"
 ITA_PIE_focus_Diplomacy_with_Austria_desc: "While Austria controls land we claim to be our own, it may be possible to get this land via diplomacy rather than war."
 ITA_PIE_focus_Reaction_to_Gastein_Conference: "Reaction to the Gastein Conference"
+ITA_PIE_focus_Reaction_to_Gastein_Conference_desc: "Austria and Prussia have signed an agreement to jointly administer Schleswig-Holstein, with Prussia controlling Schleswig and Austria controlling Holstein. We will see how this agreement turns out."
 ITA_PIE_focus_Open_Negotiations_for_the_Sale: "Open Negotiations for the Sale"
 ITA_PIE_focus_News_from_Count_Malaguzzi: "News from Count Malaguzzi"
 ITA_PIE_focus_News_from_Nigra: "News from Nigra"
