Added localization for a few descriptions.

--- a/toi/localisation/english/italy_l_english.yml
+++ b/toi/localisation/english/italy_l_english.yml
@@ -2855,7 +2855,7 @@ ITA_PIE_focus_Diplomacy_with_Prussia_desc: "Prussia may not be at the same statu
 ITA_PIE_focus_Further_Diplomacy_France: "Further Diplomacy with France"
 ITA_PIE_focus_Further_Diplomacy_France_desc: "As a great power on the continent, good relations and recognition from France will be extremely beneficial in the preservation of Italy. It may also help in the taking of the Papal States."
 ITA_PIE_focus_The_Bucharest_Revolution: "The Bucharest Revolution"
-ITA_PIE_focus_The_Bucharest_Revolution_desc: "The Romanians have taken their shot at independence from the Ottoman Empire. We will support them in their cause for freedom."
+ITA_PIE_focus_The_Bucharest_Revolution_desc: "Prince Cuza of Romania has been forced to abdicate by a coalition led by the Liberals. While still in many ways under Ottoman control, their full independence may yet be possible."
 ITA_PIE_focus_The_Brigandry_Cases: "The Brigandry Cases"
 ITA_PIE_focus_The_Brigandry_Cases_desc: "Cases of brigandry have been brought before the Italian courts. One of the most high profile is the case of the La Gala's."
 ITA_PIE_focus_Strengthen_British_Relations: "Strengthen British Relations"
@@ -2867,8 +2867,11 @@ ITA_PIE_focus_Diplomacy_with_Austria_desc: "While Austria controls land we claim
 ITA_PIE_focus_Reaction_to_Gastein_Conference: "Reaction to the Gastein Conference"
 ITA_PIE_focus_Reaction_to_Gastein_Conference_desc: "Austria and Prussia have signed an agreement to jointly administer Schleswig-Holstein, with Prussia controlling Schleswig and Austria controlling Holstein. We will see how this agreement turns out."
 ITA_PIE_focus_Open_Negotiations_for_the_Sale: "Open Negotiations for the Sale"
+ITA_PIE_focus_Open_Negotiations_for_the_Sale_desc: "Venetia is a rightful part of the Kingdom of Italy. Unfortunately, this land is controlled by Austria. We will send Malaguzzi to Vienna in an attempt to buy the land from them."
 ITA_PIE_focus_News_from_Count_Malaguzzi: "News from Count Malaguzzi"
+ITA_PIE_focus_News_from_Count_Malaguzzi_desc: "Count Malaguzzi has news relating to the purchase of Venetia. Hopefully it's good..."
 ITA_PIE_focus_News_from_Nigra: "News from Nigra"
+ITA_PIE_focus_News_from_Nigra_desc: "After the failure to purchase Venetia, we have news of another opportunity to annex Venetia. All we have to do is sell out Romania to Austria."
 ITA_PIE_focus_Send_an_Agent_to_Berlin: "Send an Agent to Berlin"
 ITA_PIE_focus_Approach_our_Old_Enemies: "Approach Our Old Enemies"
 ITA_PIE_focus_The_Third_War_of_Independence: "The Third War of Independence"
