Localized some descriptions and removed the "Armistice of Cormons" focus, as I feel that would be best implemented as an event to end the Austro - Prussian War.

--- a/toi/localisation/english/italy_l_english.yml
+++ b/toi/localisation/english/italy_l_english.yml
@@ -2819,10 +2819,15 @@ ITA_PIE_focus_Budget_Restrictions_on_the_Navy: "Budget Restrictions on the Navy"
 ITA_PIE_focus_The_Southern_Question: "The Southern Question"
 ITA_PIE_focus_The_Southern_Question_desc: "Southern Italy has significant problems and differences compared to the north. The debate over what to do about this is known as the Southern Question."
 ITA_PIE_focus_Tackling_Brigandage: "Tackling Brigandage"
+ITA_PIE_focus_Tackling_Brigandage_desc: "Brigandage has been a major problem in southern Italy ever since unification. We should take step to address these issues."
 ITA_PIE_focus_Work_with_Local_Governments: "Work with Local Governments"
+ITA_PIE_focus_Work_with_Local_Governments_desc: "Coordinating with local provincial and town governments will help with identifying and arresting brigands in the south."
 ITA_PIE_focus_Gather_Military_Leaders: "Gather Military Leaders"
+ITA_PIE_focus_Gather_Military_Leaders_desc: "Use of the military may be necessary in the destruction of brigandage. We will organize our military leaders to help fight it."
 ITA_PIE_focus_Work_with_Papal_Authorities: "Work with Papal Authorities"
+TA_PIE_focus_Work_with_Papal_Authorities_desc: "While not a country we are on the best of terms with, cooperation from the Papal States will of great importance when fighting brigandage."
 ITA_PIE_focus_Negotiate_with_Bourbons: "Negotiate with the Bourbons"
+ITA_PIE_focus_Negotiate_with_Bourbons_desc: "French assistance in fighting brigands may prove useful if our own resources are outstretched."
 ITA_PIE_focus_Gather_Political_Leaders: "Gather Political Leaders"
 ITA_PIE_focus_Bypass_the_Law: "Bypass the Law"
 ITA_PIE_focus_Southern_Development: "Southern Development"
@@ -2873,8 +2878,11 @@ ITA_PIE_focus_News_from_Count_Malaguzzi_desc: "Count Malaguzzi has news relating
 ITA_PIE_focus_News_from_Nigra: "News from Nigra"
 ITA_PIE_focus_News_from_Nigra_desc: "After the failure to purchase Venetia, we have news of another opportunity to annex Venetia. All we have to do is sell out Romania to Austria."
 ITA_PIE_focus_Send_an_Agent_to_Berlin: "Send an Agent to Berlin"
+ITA_PIE_focus_Send_an_Agent_to_Berlin_desc: "With war brewing between Austria and Prussia, joining Prussia in a victory against Austria could be our chance at taking Venetia."
 ITA_PIE_focus_Approach_our_Old_Enemies: "Approach Our Old Enemies"
+ITA_PIE_focus_Approach_our_Old_Enemies_desc: "Approachment with Austria would be a strange choice at this time, however it may lead to a diplomatic path towards the annexation of Venetia. This is no guarantee, of course.\n\n§RThis path is currently a WIP and non-functional. It may be added in a future update.§"
 ITA_PIE_focus_The_Third_War_of_Independence: "The Third War of Independence"
+ITA_PIE_focus_The_Third_War_of_Independence_desc: "The time has now come for Italian unification to continue. Venetia shall no longer be held hostage by Austria, and will be returned Italy."
 ITA_PIE_focus_Armistice_of_Cormons: "Armistice of Cormons"
 ITA_PIE_focus_Elections_of_1861: "Elections of 1861"
 ITA_PIE_focus_Elections_of_1861_desc: "The first round of elections were held recently followed by a second round of voting. The elections were held according to the 1848 electoral law of the Kingdom of Sardinia, meaning that only men aged 25 or older and paying a certain level of taxation were allowed to vote. The Voters had to choose between the Conservative Right, the Liberal Left and the Radical Far Left."
