Removed the focuses "Law no. 143" and "Law no. 616," as I don't know what they are and couldn't find any information on them. I added localization for many focuses as well.

--- a/toi/localisation/english/italy_l_english.yml
+++ b/toi/localisation/english/italy_l_english.yml
@@ -2791,6 +2791,7 @@ ita_news.4.a: "Europe has lost one of its greatest leaders"
 ### UNIFIED ITALY TREE ###
 ##########################
 ITA_PIE_focus_The_Italian_Economy: "The Italian Economy"
+ITA_PIE_focus_The_Italian_Economy_desc: "As a newly united country, we have many issues to resolve in relation to the economy. One of the most important of these issues is the economic divide between the north and south, with the south being behind the north economically and dependent on agriculture."
 ITA_PIE_focus_State_of_the_Armed_Forces: "State of the Armed Forces"
 ITA_PIE_focus_Regio_Esercito: "Regio Esercito"
 ITA_PIE_focus_Fanti_Decree: "Fanti Decree"
@@ -2825,18 +2826,27 @@ ITA_PIE_focus_Work_with_Local_Governments_desc: "Coordinating with local provinc
 ITA_PIE_focus_Gather_Military_Leaders: "Gather Military Leaders"
 ITA_PIE_focus_Gather_Military_Leaders_desc: "Use of the military may be necessary in the destruction of brigandage. We will organize our military leaders to help fight it."
 ITA_PIE_focus_Work_with_Papal_Authorities: "Work with Papal Authorities"
-TA_PIE_focus_Work_with_Papal_Authorities_desc: "While not a country we are on the best of terms with, cooperation from the Papal States will of great importance when fighting brigandage."
+ITA_PIE_focus_Work_with_Papal_Authorities_desc: "While not a country we are on the best of terms with, cooperation from the Papal States will of great importance when fighting brigandage."
 ITA_PIE_focus_Negotiate_with_Bourbons: "Negotiate with the Bourbons"
 ITA_PIE_focus_Negotiate_with_Bourbons_desc: "French assistance in fighting brigands may prove useful if our own resources are outstretched."
 ITA_PIE_focus_Gather_Political_Leaders: "Gather Political Leaders"
+ITA_PIE_focus_Gather_Political_Leaders_desc: "Getting cooperation from members of Italian parliament and other areas of government, both national and local, will help in putting an end to brigandage."
 ITA_PIE_focus_Bypass_the_Law: "Bypass the Law"
+ITA_PIE_focus_Bypass_the_Law_desc: "The law has only been a drag on our work to put a stop to brigandage in southern Italy. We need to take some questionably legal measures to stop this crisis."
 ITA_PIE_focus_Southern_Development: "Southern Development"
+ITA_PIE_focus_Southern_Development_desc: "In order to curb brigandage, we cannot simply use force. We need to give incentive to those in southern Italy to work legal jobs rather than make money through brigandage. Of course, though, we can also starve out the south instead."
 ITA_PIE_focus_Move_Southern_Industry_North: "Move Southern Industry North"
+ITA_PIE_focus_Move_Southern_Industry_North_desc: "By moving southern industry north, we can make very clear our preference for northern Italians."
 ITA_PIE_focus_Utilize_Piedmontese_Workers: "Utilize Piedmontese Workers"
+ITA_PIE_focus_Utilize_Piedmontese_Workers_desc: "We will continue to starve out the south by utilizing Piedmontese workers rather than those of the south."
 ITA_PIE_focus_Regional_Economic_Administrations: "Regional Economic Administrations"
+ITA_PIE_focus_Regional_Economic_Administrations_desc: "The first step in economic equality in Italy will be to set up regional economic administrations who can specialize in and take advantage of unique elements of the geography of the regions they administer."
 ITA_PIE_focus_End_Elitist_Economic_Policies: "End Elitist Economic Policies"
+ITA_PIE_focus_End_Elitist_Economic_Policies_desc: "We will ease class tensions by implementing economic policy that favors workers more than previous policy."
 ITA_PIE_focus_Increase_Military_Protection: "Increase Military Protection"
+ITA_PIE_focus_Increase_Military_Protection_desc: "By increasing our garrisons in the south we can make a significant dent in brigandage."
 ITA_PIE_focus_Declare_End_of_Brigandage: "Declare the End of Brigandage"
+ITA_PIE_focus_Declare_End_of_Brigandage_desc: "Finally, by curbing brigandage directly and improving the quality of life in the south, we can finally declare the end of major brigandage in Italy."
 ITA_PIE_focus_Foreign_Policy: "Foreign Policy"
 ITA_PIE_focus_Foreign_Policy_desc: "As a new country, we will have a long road ahead to reach the status of other great powers in Europe. An important element of this will be diplomacy and the recognition from other states."
 ITA_PIE_focus_The_Roman_Question: "The Roman Question"
@@ -2925,17 +2935,29 @@ ITA_PIE_focus_III_La_Marmora_Government: "III La Marmora Government"
 ITA_PIE_focus_Dissolution_of_the_chamber: "Dissolution of the Chamber"
 ITA_PIE_focus_Replace_La_Marmora: "Replace La Marmora"
 ITA_PIE_focus_Begin_the_Infastructure_project: "Begin the Infastructure Project"
+ITA_PIE_focus_Begin_the_Infastructure_project_desc: "Seeing as many states on the Italian peninsula have all become one, we must connect the former territory of these states to each other to a degree not possible when they were separate nations."
 ITA_PIE_focus_Importation_of_Machinery_Iron: "Importation of Machinery Iron"
+ITA_PIE_focus_Importation_of_Machinery_Iron_desc: "In order to build trains to use on new railroads, we need to import iron as raw materials to use in their production."
 ITA_PIE_focus_encourage_foreign_investments: "Encourage Foreign Investments"
+ITA_PIE_focus_encourage_foreign_investments_desc: "Foreign investments and loans could seriously accelerate the building of industry and rail in Italy."
 ITA_PIE_focus_Embrace_Foreign_Technology: "Embrace Foreign Technology"
+ITA_PIE_focus_Embrace_Foreign_Technology_desc: "It would be a waste to spend time developing our own technology when foreign countries have done the work for us."
 ITA_PIE_focus_Rail_Lines_of_the_Center: "Rail Lines of the Center"
+ITA_PIE_focus_Rail_Lines_of_the_Center_desc: "Rail lines at the center of the peninsula will connect northern and southern Italy."
 ITA_PIE_focus_Northern_Rail_Lines: "Northern Rail Lines"
+ITA_PIE_focus_Northern_Rail_Lines_desc: "Rail lines in the north of Italy will assist in the transportation of raw and manufactured products between industrial centers."
 ITA_PIE_focus_Southern_Rail_Lines: "Sourthern Rail Lines"
+ITA_PIE_focus_Southern_Rail_Lines_desc: "While not as integral as the northern rail lines, southern rail can still be used for transporting people and agricultural goods."
 ITA_PIE_focus_1865_Railways_Act: "1865 Railways Act"
+ITA_PIE_focus_1865_Railways_Act_desc: "The 1865 Railways Act will help connect the formerly separated rail lines into one grand railway network connecting all of italy."
 ITA_PIE_focus_Agriculture_of_Italy: "Agriculture of Italy"
+ITA_PIE_focus_Agriculture_of_Italy_desc: "Italy has a long history of agriculture. While industrialization is also important, development and modernization of our agriculture will be of great benefit."
 ITA_PIE_focus_Approve_the_Sale_of_Church_Estates: "Approve the Sale of Church Estates"
+ITA_PIE_focus_Approve_the_Sale_of_Church_Estates_desc: "While not the most ethical thing we could do, approving the sale of church land would provide much more space for grazing and farming."
 ITA_PIE_focus_The_Growth_of_Agrarianism: "The Growth of Agrarianism"
+ITA_PIE_focus_The_Growth_of_Agrarianism_desc: "With the new land for agricultural endeavours, agrarianism has grown significantly."
 ITA_PIE_focus_Canali_Cavour: "Canali Cavour"
+ITA_PIE_focus_Canali_Cavour_desc: "The Cavour Canal will serve an important role in agriculture in Italy. It will be used to transport raw crops and products made out of the raw materials."
 ITA_PIE_focus_Embrace_Northern_Agricultural_Revolution: "Embrace Northern Agricultural Revolution"
 ITA_PIE_focus_Invest_in_Technological_Advancements: "Invest in Technological Advancements"
 ITA_PIE_focus_Continue_Textile_Developments: "Continue Textile Developments"
@@ -2946,9 +2968,12 @@ ITA_PIE_focus_Exploit_Existing_Land_Holdings: "Exploit Existing Land Holdings"
 ITA_PIE_focus_Introduce_Agriculture_to_Rail: "Utilize the Rail for Agriculture"
 ITA_PIE_focus_Resource_Extraction_Techniques: "Resource Extraction Techniques"
 ITA_PIE_focus_The_Industrialization_of_Italy: "The Industrialization of Italy"
+ITA_PIE_focus_The_Industrialization_of_Italy_desc: "Italy, with a large agricultural economy, could benefit greatly from developments in heavy industry."
 ITA_PIE_focus_Address_the_Sine_Qua_Non: "Address the Sine Qua Non"
 ITA_PIE_focus_Investments_into_Hydroelectric_Power: "Investments into Hydroelectric Power"
+ITA_PIE_focus_Investments_into_Hydroelectric_Power_desc: "Investments into hydroelectric power could be beneficial for Italy, a country with a vast coastline."
 ITA_PIE_focus_Ricchezza_Mobile_Offsets: "Ricchezza Mobile Offsets"
+ITA_PIE_focus_Ricchezza_Mobile_Offsets_desc: "Subsidizing the purchase of property by Italian citizens may prove to succeed at increasing economic output."
 
 
 
