--- a/toi/localisation/english/italy_l_english.yml
+++ b/toi/localisation/english/italy_l_english.yml
@@ -2959,10 +2959,15 @@ ITA_PIE_focus_The_Growth_of_Agrarianism_desc: "With the new land for agricultura
 ITA_PIE_focus_Canali_Cavour: "Canali Cavour"
 ITA_PIE_focus_Canali_Cavour_desc: "The Cavour Canal will serve an important role in agriculture in Italy. It will be used to transport raw crops and products made out of the raw materials."
 ITA_PIE_focus_Embrace_Northern_Agricultural_Revolution: "Embrace Northern Agricultural Revolution"
+ITA_PIE_focus_Embrace_Northern_Agricultural_Revolution_desc: "While industrialization is the main focus for our economy right now, an expansion of agriculture in the north will make significant economic impact and provide more food for the Italian people, or that can be sold."
 ITA_PIE_focus_Invest_in_Technological_Advancements: "Invest in Technological Advancements"
+ITA_PIE_focus_Invest_in_Technological_Advancements_desc: "We cannot simply continue on with our current technology when trying to increase our production efficiency. Improvements on a technical level will bring with it increased safety and yields of products, both in and outside the factories."
 ITA_PIE_focus_Continue_Textile_Developments: "Continue Textile Developments"
+ITA_PIE_focus_Continue_Textile_Developments_desc: "Northern Italy has historically relied on artisans and the wider production of textiles for much of its economic activity. Advancements in the designing and production of textiles may prove beneficial in the future."
 ITA_PIE_focus_Introduce_the_new_Ruling_Class: "Introduce the New Ruling Class"
+ITA_PIE_focus_Introduce_the_new_Ruling_Class_desc: "The Italian people are tired of the aristocratic ruling class in the north. We shall introduce a new ruling class of farmers and southerners by distributing publicly held land to Italian citizens in the south."
 ITA_PIE_focus_Initial_Land_Reforms: "Initial Land Reforms"
+ITA_PIE_focus_Initial_Land_Reforms_desc: "Finally, it has come time to redistribute land to those in the south of Italy."
 ITA_PIE_focus_Focus_on_the_South: "Focus on the South"
 ITA_PIE_focus_Exploit_Existing_Land_Holdings: "Exploit Existing Land Holdings"
 ITA_PIE_focus_Introduce_Agriculture_to_Rail: "Utilize the Rail for Agriculture"
@@ -2970,6 +2975,7 @@ ITA_PIE_focus_Resource_Extraction_Techniques: "Resource Extraction Techniques"
 ITA_PIE_focus_The_Industrialization_of_Italy: "The Industrialization of Italy"
 ITA_PIE_focus_The_Industrialization_of_Italy_desc: "Italy, with a large agricultural economy, could benefit greatly from developments in heavy industry."
 ITA_PIE_focus_Address_the_Sine_Qua_Non: "Address the Sine Qua Non"
+ITA_PIE_focus_Address_the_Sine_Qua_Non_desc: "The basis of an strong industrial economy are the factories where our citizens will be paid for their work and important products and materials are produced. We can't get carried away constructing rail without building the industry that will use it."
 ITA_PIE_focus_Investments_into_Hydroelectric_Power: "Investments into Hydroelectric Power"
 ITA_PIE_focus_Investments_into_Hydroelectric_Power_desc: "Investments into hydroelectric power could be beneficial for Italy, a country with a vast coastline."
 ITA_PIE_focus_Ricchezza_Mobile_Offsets: "Ricchezza Mobile Offsets"
