Added localization for some Italian focuses

--- a/toi/localisation/english/italy_l_english.yml
+++ b/toi/localisation/english/italy_l_english.yml
@@ -2793,13 +2793,21 @@ ita_news.4.a: "Europe has lost one of its greatest leaders"
 ITA_PIE_focus_The_Italian_Economy: "The Italian Economy"
 ITA_PIE_focus_The_Italian_Economy_desc: "As a newly united country, we have many issues to resolve in relation to the economy. One of the most important of these issues is the economic divide between the north and south, with the south being behind the north economically and dependent on agriculture."
 ITA_PIE_focus_State_of_the_Armed_Forces: "State of the Armed Forces"
+ITA_PIE_focus_State_of_the_Armed_Forces_desc: "Since unification, the Italian armed forces have been incredibly disorganised due to the conflicting doctrines and organisational structures between former Italian states. It is our goal to turn our fragmented military into one coherent, organised, and devastatingly effective unit."
 ITA_PIE_focus_Regio_Esercito: "Regio Esercito"
+ITA_PIE_focus_Regio_Esercito_desc: "Regio Esercito, or the Royal Italian Army, is our main fighting force on the ground. Having been created from the pieces of the armies of former Italian states across the peninsula, it is our goal to turn it into a professional, organised, force."
 ITA_PIE_focus_Fanti_Decree: "Fanti Decree"
+ITA_PIE_focus_Fanti_Decree_desc: "This decree, signed by Manfredo Fanti, denotes the official creation of the Royal Italian Army, the successor to the Royal Sardinian Army and the Army of the Two Sicilies."
 ITA_PIE_focus_Unification_of_the_Army: "Unification of the Army"
-ITA_PIE_focus_Organize_the_Army: "Organize the Army"
+ITA_PIE_focus_Unification_of_the_Army_desc: "Now that we have an official organisation to unify our fragmented army into, it's about time we do it. We will officially dissolve the Royal Sardinian Army and the Army of the Two Sicilies, and merge them into the Royal Italian Army."
+ITA_PIE_focus_Organize_the_Army: "Organise the Army"
+ITA_PIE_focus_Organize_the_Army_desc: "While the armies of Italy are now officialy one unit, there is still a rift between sections of the army that have come from different Italian states. If we want to really unify the Italian army, we need to smooth out these gaps."
 ITA_PIE_focus_Requisition_Old_Equipment: "Requisition of Old Equipment"
-ITA_PIE_focus_Organization_of_the_General_Staff: "Organization of the General Staff"
+ITA_PIE_focus_Requisition_Old_Equipment_desc: "While older equipment can have its flaws, it's better than no equipment for some of our troops. We shall 'requisition' some older weapons and other gear to help supply our young army."
+ITA_PIE_focus_Organization_of_the_General_Staff: "Organisation of the General Staff"
+ITA_PIE_focus_Organization_of_the_General_Staff_desc: "General staff coming from many different Italian states aren't particularly fond of, or good at, working with each other. Organising our staff to better work with each other will be of great help to our army."
 ITA_PIE_focus_Lessons_from_the_Third_Independence_War: "Lessons from the Third Independence War"
+ITA_PIE_focus_Lessons_from_the_Third_Independence_War_desc: "The Third Independence War taught us many lessons about how we should run our army. It would be to our benefit to use what we learned from this war with a great power to further improve our army."
 ITA_PIE_focus_Carabinieri: "Carabinieri"
 ITA_PIE_focus_Law_no_616: "Law no. 616"
 ITA_PIE_focus_Bersaglieri: "Bersaglieri"
@@ -2969,9 +2977,13 @@ ITA_PIE_focus_Introduce_the_new_Ruling_Class_desc: "The Italian people are tired
 ITA_PIE_focus_Initial_Land_Reforms: "Initial Land Reforms"
 ITA_PIE_focus_Initial_Land_Reforms_desc: "Finally, it has come time to redistribute land to those in the south of Italy."
 ITA_PIE_focus_Focus_on_the_South: "Focus on the South"
+ITA_PIE_focus_Focus_on_the_South_desc: "The south of Italy has for millenia been neglected and behind its northern counterpart. A focus on the south will help bring it closer to the north economically."
 ITA_PIE_focus_Exploit_Existing_Land_Holdings: "Exploit Existing Land Holdings"
+ITA_PIE_focus_Exploit_Existing_Land_Holdings_desc: "While the distribution of land has been of great benefit to those in southern Italy, we should make an attempt to get the most out of existing agricultural land in the south."
 ITA_PIE_focus_Introduce_Agriculture_to_Rail: "Utilize the Rail for Agriculture"
+ITA_PIE_focus_Introduce_Agriculture_to_Rail_desc: "After constructing miles and miles of rail on the Italian peninsula, encouraging its use for agricultural purposes could prove beneficial."
 ITA_PIE_focus_Resource_Extraction_Techniques: "Resource Extraction Techniques"
+ITA_PIE_focus_Resource_Extraction_Techniques_desc: "In order to power a new, industrial, economy, we need lots of mineral resources. We will develop new techniques to extract reources like coal and crude oil to power our factories."
 ITA_PIE_focus_The_Industrialization_of_Italy: "The Industrialization of Italy"
 ITA_PIE_focus_The_Industrialization_of_Italy_desc: "Italy, with a large agricultural economy, could benefit greatly from developments in heavy industry."
 ITA_PIE_focus_Address_the_Sine_Qua_Non: "Address the Sine Qua Non"
